# LastPrjDemonstration

./: CMakeLists.txt  README.md  flag.h  loupe_manager.cpp  loupe_manager.h  main.cpp  rls_manager.cpp  rls_manager.h  setting_app_style.cpp  setting_app_style.h  targets_manager.cpp  targets_manager.h
common/: self_ship.h
coordinates/: geo_point.h  polar_point.h  polar_rect.h  rect_point.h
data/: auto_deleted_vector.h  ship_data.h  target_data.h
data_base/: db_connection.cpp  db_connection.h  proton_self_ship.cpp  proton_self_ship.h  proton_targets.cpp  proton_targets.h
display/: auto_catch_area.cpp  auto_catch_area.h  course_vector.cpp  course_vector.h  cursor.cpp  cursor.h  degree_marks.cpp  degree_marks.h  display_setting_enums.h  display_settings.h  distance_rings.cpp  distance_rings.h  hello_spiral.cpp  hello_spiral.h  loupe_display.cpp  loupe_display.h  noise_emulator.cpp  noise_emulator.h  rls_display.cpp  rls_display.h  situation_group.cpp  situation_group.h  targets_display.cpp  targets_display.h  uisettings.h  visor.cpp  visor.h
input_controls/: input_control.h  keyboard_actions.cpp  keyboard_actions.h  keyboard_control.cpp  keyboard_control.h  virtual_keyboard.cpp  virtual_keyboard.h
input_controls/devices/: bulb.cpp  bulb.h  button.cpp  button.h  circle_math.cpp  circle_math.h  dial.cpp  dial.h  image_widget.cpp  image_widget.h  tumbler.cpp  tumbler.h
math/: coordinate_math.cpp  coordinate_math.h  geometry_math.cpp  geometry_math.h  simplex_noise_generator.cpp  simplex_noise_generator.h
prj_version_lib/: CMakeLists.txt  prj_vers_lib_res.qrc  prj_version.cpp  prj_version.h  prj_version_dialog.cpp  prj_version_dialog.h  vers.txt
window/: enable_label.cpp  enable_label.h  enum_widget.cpp  enum_widget.h  ivalue.h  onoff_value_widget.cpp  onoff_value_widget.h  progress_widget.cpp  progress_widget.h  rls_window.cpp  rls_window.h  styled_classes.h  uicolors.h  value_dynamic_label.h  value_widget.cpp  value_widget.h
window/menu/: menu_container.cpp  menu_container.h  menu_item.cpp  menu_item.h  menu_item_button.cpp  menu_item_button.h  menu_item_value.cpp  menu_item_value.h  menu_widget.cpp  menu_widget.h
